--- a/IndoorSceneLoggingSystem/IndoorSceneLoggingSystem.vcxproj
+++ b/IndoorSceneLoggingSystem/IndoorSceneLoggingSystem.vcxproj
@@ -23,14 +23,19 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="sensor_client\kinectv2_client.cpp" />
     <ClCompile Include="sensor_client\sensor_client.cpp" />
+    <ClCompile Include="util\base64.cpp" />
     <ClCompile Include="util\config\config.cpp" />
     <ClCompile Include="util\util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="indoor_scene_logging_system.h" />
+    <ClInclude Include="kinect_pack.h" />
     <ClInclude Include="sensor_client\kinectv2_client.h" />
     <ClInclude Include="sensor_client\sensor_client.h" />
+    <ClInclude Include="util\base64.h" />
     <ClInclude Include="util\config\config.h" />
+    <ClInclude Include="util\kinect_pack_util\kinect_pack_util.h" />
+    <ClInclude Include="util\msgpack_util\msgpack_util.h" />
     <ClInclude Include="util\util.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -136,7 +141,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(SolutionDir)\lib\Release;</AdditionalLibraryDirectories>
-      <AdditionalDependencies>libzmq.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libzmq.lib;msgpack.lib;opencv_core310.lib;opencv_highgui310.lib;opencv_imgproc310.lib;opencv_imgcodecs310.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
