--- a/IndoorSceneLoggingSystem/IndoorSceneLoggingSystem.vcxproj
+++ b/IndoorSceneLoggingSystem/IndoorSceneLoggingSystem.vcxproj
@@ -19,24 +19,30 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="client\client.cpp" />
+    <ClCompile Include="client\sensor_client\kinectv2_client.cpp" />
+    <ClCompile Include="client\visual_client\visual_client.cpp" />
     <ClCompile Include="indoor_scene_logging_system.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="sensor_client\kinectv2_client.cpp" />
-    <ClCompile Include="sensor_client\sensor_client.cpp" />
     <ClCompile Include="util\base64.cpp" />
     <ClCompile Include="util\config\config.cpp" />
     <ClCompile Include="util\util.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="client\client.h" />
+    <ClInclude Include="client\sensor_client\kinectv2_client.h" />
+    <ClInclude Include="client\sensor_client\kinect_pack.h" />
+    <ClInclude Include="client\visual_client\visual_client.h" />
     <ClInclude Include="indoor_scene_logging_system.h" />
-    <ClInclude Include="kinect_pack.h" />
-    <ClInclude Include="sensor_client\kinectv2_client.h" />
-    <ClInclude Include="sensor_client\sensor_client.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="util\base64.h" />
     <ClInclude Include="util\config\config.h" />
     <ClInclude Include="util\kinect_pack_util\kinect_pack_util.h" />
     <ClInclude Include="util\msgpack_util\msgpack_util.h" />
     <ClInclude Include="util\util.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="IndoorSceneLoggingSystem.rc" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{29B74AC8-EE22-414B-8F91-E3C474D2C74E}</ProjectGuid>
