--- a/IndoorSceneLoggingSystem/IndoorSceneLoggingSystem.vcxproj.filters
+++ b/IndoorSceneLoggingSystem/IndoorSceneLoggingSystem.vcxproj.filters
@@ -15,9 +15,6 @@
     <Filter Include="ソース ファイル\util">
       <UniqueIdentifier>{fe7cec4f-d711-44da-8bcb-ce0cac6a7cbf}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ソース ファイル\sensor_client">
-      <UniqueIdentifier>{e3e972d7-cafb-4141-87b2-b695e0a55166}</UniqueIdentifier>
-    </Filter>
     <Filter Include="ソース ファイル\util\config">
       <UniqueIdentifier>{0b74520a-9843-4cc5-ba8e-efdc5793d4cb}</UniqueIdentifier>
     </Filter>
@@ -27,6 +24,15 @@
     <Filter Include="ソース ファイル\util\msgpack_util">
       <UniqueIdentifier>{ef11a99e-d8d0-4413-b46d-b016e3e6e947}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\client">
+      <UniqueIdentifier>{4ee125b0-f232-454c-b100-0cb057c533bd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\client\sensor_client">
+      <UniqueIdentifier>{e3e972d7-cafb-4141-87b2-b695e0a55166}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\client\visual_client">
+      <UniqueIdentifier>{b71c97af-16d7-4e3d-894a-674b9cefbee8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -34,12 +40,6 @@
     </ClCompile>
     <ClCompile Include="indoor_scene_logging_system.cpp">
       <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="sensor_client\sensor_client.cpp">
-      <Filter>ソース ファイル\sensor_client</Filter>
-    </ClCompile>
-    <ClCompile Include="sensor_client\kinectv2_client.cpp">
-      <Filter>ソース ファイル\sensor_client</Filter>
     </ClCompile>
     <ClCompile Include="util\util.cpp">
       <Filter>ソース ファイル\util</Filter>
@@ -50,25 +50,25 @@
     <ClCompile Include="util\base64.cpp">
       <Filter>ソース ファイル\util</Filter>
     </ClCompile>
+    <ClCompile Include="client\sensor_client\kinectv2_client.cpp">
+      <Filter>ソース ファイル\client\sensor_client</Filter>
+    </ClCompile>
+    <ClCompile Include="client\visual_client\visual_client.cpp">
+      <Filter>ソース ファイル\client\visual_client</Filter>
+    </ClCompile>
+    <ClCompile Include="client\client.cpp">
+      <Filter>ソース ファイル\client</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="util\util.h">
       <Filter>ソース ファイル\util</Filter>
-    </ClInclude>
-    <ClInclude Include="sensor_client\kinectv2_client.h">
-      <Filter>ソース ファイル\sensor_client</Filter>
-    </ClInclude>
-    <ClInclude Include="sensor_client\sensor_client.h">
-      <Filter>ソース ファイル\sensor_client</Filter>
     </ClInclude>
     <ClInclude Include="indoor_scene_logging_system.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
     <ClInclude Include="util\config\config.h">
       <Filter>ソース ファイル\util\config</Filter>
-    </ClInclude>
-    <ClInclude Include="kinect_pack.h">
-      <Filter>ソース ファイル\sensor_client</Filter>
     </ClInclude>
     <ClInclude Include="util\base64.h">
       <Filter>ソース ファイル\util</Filter>
@@ -79,5 +79,23 @@
     <ClInclude Include="util\msgpack_util\msgpack_util.h">
       <Filter>ソース ファイル\util\msgpack_util</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="client\sensor_client\kinect_pack.h">
+      <Filter>ソース ファイル\client\sensor_client</Filter>
+    </ClInclude>
+    <ClInclude Include="client\sensor_client\kinectv2_client.h">
+      <Filter>ソース ファイル\client\sensor_client</Filter>
+    </ClInclude>
+    <ClInclude Include="client\visual_client\visual_client.h">
+      <Filter>ソース ファイル\client\visual_client</Filter>
+    </ClInclude>
+    <ClInclude Include="client\client.h">
+      <Filter>ソース ファイル\client</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="IndoorSceneLoggingSystem.rc">
+      <Filter>リソース ファイル</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
